<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/ic_event_24dp"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_star_24dp"
        android:title="@string/title_review" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/title_account" />
    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat_24dp"
        android:title="@string/title_chats" />

</menu>
